ocelot 网关结合Consul实现动态路由，结合Polly'实现熔断，自定义限流（上述都是通过ocelot.json配置文件加 相应的包进行实现）

--- a/SchoolManageMicroService/SchoolManageMicroService.Aggregates/appsettings.json
+++ b/SchoolManageMicroService/SchoolManageMicroService.Aggregates/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConsulDiscovery": {
     "RegistryAddress": "http://127.0.0.1:8500"
+  },
+  "ConsulRegistry": {
+    "Name": "AggregatesService",
+    "RegistryAddress": "http://127.0.0.1:8500",
+    "HealthCheckAddress": "/api/HealthCheck",
+    "LocalAddress": "https://localhost:7012"
   }
 }
