--- a/SchoolManageMicroService/SchoolManageMicroService.Gateway/SchoolManageMicroService.Gateway.csproj
+++ b/SchoolManageMicroService/SchoolManageMicroService.Gateway/SchoolManageMicroService.Gateway.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="ocelot" Version="18.0.0" />
+    <PackageReference Include="Ocelot.Provider.consul" Version="18.0.0" />
+    <PackageReference Include="Ocelot.Provider.Polly" Version="18.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
