--- a/SchoolManageMicroService/SchoolManageMicroService.Classes/SchoolManageMicroService.Classes.csproj
+++ b/SchoolManageMicroService/SchoolManageMicroService.Classes/SchoolManageMicroService.Classes.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.-1json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.-1json" />
+  </ItemGroup>
+
+  <ItemGroup>
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.7">
 		  <PrivateAssets>all</PrivateAssets>
