--- a/SchoolManageMicroService/SchoolManageMicroService.Core/SchoolManageMicroService.Core.csproj
+++ b/SchoolManageMicroService/SchoolManageMicroService.Core/SchoolManageMicroService.Core.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
     <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.9" />
+    <PackageReference Include="Winton.Extensions.Configuration.Consul" Version="3.2.0" />
   </ItemGroup>
 
 </Project>
